# csc299-project

./: SUMMARY.md  Video.txt
ClassDirections/: FinalProject.txt  Schedule.txt
Discussion_with_LLM/: Study and Developement Plan.md  Task 1-Discussion-with-LLM.md
Discussion_with_LLM/.obsidian/: workspace.json
diet-tracker/: README.md  agents.py  api_client.py  api_key.py  foods.py  goals.py  main.py  storage.py
diet-tracker/data/: foods.json  goals.json  tasks.json
tasks1/: README.md  tasks.json  tasks.py
tasks2/: README.md  notes.json  tasks.json  tasks.py
tasks3/: pyproject.toml  tasks.json
tasks3/src/tasks3/: __init__.py
tasks3/tests/: test_chat.py  test_tasks.py
tasks4/: pyproject.toml
tasks4/src/tasks4/: __init__.py
tasks4/tests/: test_tasks4.py
tasks5/: README.md  pyproject.toml  setup.py
tasks5/specs/001-task-manager-cli/: plan.md  spec.md  tasks.md
tasks5/tests/: test_cli_end_to_end.py  test_storage.py
tasks5/tools/task_manager_cli/: atomic.py  cli.py  models.py  storage.py
